--- a/practice/src/sass/style.sass
+++ b/practice/src/sass/style.sass
@@ -16,6 +16,9 @@
 @import 'templates/team'
 @import 'templates/clients'
 @import 'templates/footer'
+@import 'templates/thanks'
+@import 'templates/message'
+
 
 
 @import 'media'
