--- a/practice/src/sass/_settings.sass
+++ b/practice/src/sass/_settings.sass
@@ -7,6 +7,8 @@ body
   font-size: 1rem
 img 
   max-width: 100%
+.text-align--center
+  text-align: center
 .disabled
   display: none !important
 .section
