add: section advantages

--- a/practice/src/sass/_media.sass
+++ b/practice/src/sass/_media.sass
@@ -72,7 +72,8 @@
         padding-bottom: 0.5rem
     &__text
       padding-top: 17rem
-        
+  .advantages
+    display: none
   .clients
     display: none
   .footer
