--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -987,6 +987,148 @@ div.invalid {
   color: #ffffff;
   padding: 1.214rem 2.6rem; }
 
+.advantages {
+  padding-top: 10.8rem; }
+  .advantages__col-advantage {
+    position: relative;
+    padding-right: 2rem; }
+    .advantages__col-advantage::after {
+      content: '';
+      z-index: -1;
+      position: absolute;
+      width: 100%;
+      height: 104%;
+      top: -5rem;
+      left: 0.3rem;
+      opacity: 0.5;
+      background-image: url(../img/advantages-bg.jpg);
+      background-position: left top;
+      background-size: cover;
+      background-repeat: no-repeat;
+      box-shadow: -100px 0px 19px 56px white; }
+  .advantages__col-form {
+    -webkit-box-align: center;
+    align-items: center; }
+  .advantages__block {
+    position: relative;
+    margin-left: -17.5rem;
+    width: 45rem;
+    height: 45rem; }
+    .advantages__block::before {
+      content: '';
+      position: absolute;
+      z-index: 0;
+      top: -0.5rem;
+      right: -11rem;
+      width: 100%;
+      height: 110%;
+      background-image: url(../img/circle.svg);
+      background-position: left top;
+      background-repeat: no-repeat; }
+  .advantages__item {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    z-index: 1;
+    -webkit-box-align: center;
+    align-items: center;
+    position: absolute;
+    width: 32rem;
+    padding: 1rem; }
+    .advantages__item:nth-child(1) {
+      top: 3rem;
+      right: -22.3rem; }
+    .advantages__item:nth-child(2) {
+      top: 10.8rem;
+      right: -28rem; }
+    .advantages__item:nth-child(3) {
+      bottom: 17.6rem;
+      right: -29.8rem; }
+    .advantages__item:nth-child(4) {
+      bottom: 6rem;
+      right: -24.6rem; }
+  .advantages__circle {
+    position: relative;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    background: #e3b873;
+    color: #ffffff;
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    font-family: 'Yeseva One', cursive; }
+  .advantages__number {
+    font-size: 1.28rem;
+    line-height: 1.78rem;
+    text-align: center; }
+  .advantages__advantage {
+    max-width: 26rem;
+    margin-left: 1rem;
+    font-family: 'Futura Book';
+    font-weight: 700;
+    font-size: 1.28rem;
+    line-height: 1.6rem; }
+  .advantages-form__dialog {
+    display: block;
+    position: relative;
+    max-width: 36.36rem;
+    background: #131313 url("../img/bg-lines.svg");
+    padding: 1.9rem 3.5rem 1.928rem;
+    color: #ffffff; }
+  .advantages-form__title {
+    margin-top: 0;
+    margin-bottom: 2.92rem;
+    font-family: 'Futura Demi';
+    font-size: 1.428rem;
+    line-height: 1.78rem;
+    text-align: center; }
+  .advantages-form__input-group {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    margin-bottom: 3.5rem; }
+    .advantages-form__input-group-3 {
+      margin-bottom: 0rem; }
+  .advantages-form__button {
+    width: 15.2rem;
+    padding: 1.33rem 1.57rem;
+    font-size: 1rem;
+    align-self: flex-end; }
+  .advantages__economy {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-top: 2.71rem; }
+  .advantages__icon {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    width: 72px;
+    height: 72px;
+    margin-left: 2.2rem;
+    background-color: #e3b873;
+    border-radius: 50%; }
+  .advantages__info {
+    margin-left: 2rem;
+    font-family: 'Futura Demi';
+    font-size: 1.428rem;
+    line-height: 1.785rem;
+    color: #e3b873;
+    text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15); }
+
 .design {
   margin-bottom: -35rem;
   display: -webkit-box;
@@ -1153,9 +1295,12 @@ div.invalid {
   -webkit-box-pack: center;
   justify-content: center; }
   .modal--unvisible {
+    display: none;
     opacity: 0;
     visibility: hidden; }
   .modal--visible {
+    display: -webkit-box;
+    display: flex;
     opacity: 1;
     visibility: visible; }
   .modal__dialog {
@@ -1194,8 +1339,8 @@ div.invalid {
     -webkit-box-direction: normal;
     flex-direction: column;
     margin-bottom: 3.482rem; }
-  .modal__input:last-of-type {
-    margin-bottom: 1rem; }
+    .modal__input-group:last-of-type {
+      margin-bottom: 1rem; }
   .modal__policy {
     margin-bottom: 2.7rem; }
   .modal__button {
@@ -1785,6 +1930,8 @@ div.invalid {
     padding-bottom: 0.5rem; }
   .team__text {
     padding-top: 17rem; }
+  .advantages {
+    display: none; }
   .clients {
     display: none; }
   .footer__wrap {
