--- a/practice/src/sass/style.sass
+++ b/practice/src/sass/style.sass
@@ -10,6 +10,7 @@
 @import 'templates/projects'
 @import 'templates/control'
 @import 'templates/types'
+@import 'templates/advantages'
 @import 'templates/design'
 @import 'templates/modal'
 @import 'templates/steps'
