--- a/practice/src/sass/templates/_modal.sass
+++ b/practice/src/sass/templates/_modal.sass
@@ -14,9 +14,11 @@
   align-items: center
   justify-content: center
   &--unvisible
+    display: none
     opacity: 0
     visibility: hidden
   &--visible
+    display: flex
     opacity: 1
     visibility: visible    
   &__dialog
@@ -50,8 +52,8 @@
       display: flex
       flex-direction: column
       margin-bottom: 3.482rem
-    &:last-of-type
-      margin-bottom: 1rem
+      &:last-of-type
+        margin-bottom: 1rem
   &__policy
     margin-bottom: 2.7rem
   &__button
