--- a/practice/src/css/style.css
+++ b/practice/src/css/style.css
@@ -12,6 +12,13 @@
   font-style: normal;
   font-display: swap; }
 
+@font-face {
+  font-family: 'FuturaLightC';
+  src: url("../fonts/futura/FuturaLightC.woff") format("woff");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap; }
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -644,6 +651,9 @@ div.invalid {
 .col-30 {
   width: 30%; }
 
+.col-35 {
+  width: 35%; }
+
 .col-39 {
   width: 39%; }
 
@@ -988,7 +998,8 @@ div.invalid {
   padding: 1.214rem 2.6rem; }
 
 .advantages {
-  padding-top: 10.8rem; }
+  padding-top: 10.8rem;
+  padding-bottom: 12rem; }
   .advantages__col-advantage {
     position: relative;
     padding-right: 2rem; }
@@ -1021,7 +1032,7 @@ div.invalid {
       top: -0.5rem;
       right: -11rem;
       width: 100%;
-      height: 110%;
+      height: 125%;
       background-image: url(../img/circle.svg);
       background-position: left top;
       background-repeat: no-repeat; }
@@ -1075,6 +1086,7 @@ div.invalid {
     line-height: 1.6rem; }
   .advantages-form__dialog {
     display: block;
+    margin-top: 3rem;
     position: relative;
     max-width: 36.36rem;
     background: #131313 url("../img/bg-lines.svg");
@@ -1129,7 +1141,65 @@ div.invalid {
     color: #e3b873;
     text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15); }
 
+.fantasy {
+  background-image: url(../img/fantasy-bg.jpg);
+  background-position: center center;
+  background-size: cover;
+  height: 61.74rem; }
+  .fantasy__col-slider {
+    position: relative; }
+  .fantasy__heading {
+    margin-top: 5.5rem;
+    margin-bottom: 2.8rem;
+    font-family: 'Yeseva One';
+    font-size: 1.928rem;
+    text-transform: uppercase;
+    text-align: left;
+    color: #e3b873; }
+  .fantasy__item {
+    font-family: 'FuturaLightC';
+    font-size: 1.45rem;
+    line-height: 3.525rem;
+    color: #ffffff;
+    letter-spacing: 2px; }
+    .fantasy__item:hover {
+      cursor: pointer; }
+    .fantasy__item--active {
+      text-decoration: underline;
+      color: #e3b873; }
+  .fantasy__gallery {
+    position: absolute;
+    z-index: 99;
+    top: -11.5rem; }
+  .fantasy__swiper-container {
+    height: 120%;
+    max-height: 72.64rem; }
+  .fantasy-slide {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    max-height: 100rem !important; }
+    .fantasy-slide__image-1 {
+      max-height: 39.77rem;
+      width: auto;
+      margin-top: 4.28rem; }
+    .fantasy-slide__image-2 {
+      max-height: 25rem;
+      width: auto;
+      margin-top: 2.857rem; }
+    .fantasy-slide__image-3 {
+      max-height: 19.64rem;
+      width: auto;
+      margin-left: 1rem;
+      margin-bottom: 2.62rem; }
+    .fantasy-slide__image-4 {
+      max-height: 44.64rem;
+      width: auto;
+      margin-left: 1rem; }
+
 .design {
+  padding-top: 9.8rem;
   margin-bottom: -35rem;
   display: -webkit-box;
   display: flex;
@@ -1867,15 +1937,43 @@ div.invalid {
     margin: 0;
     margin-bottom: 2.428rem; }
 
+@media screen and (max-width: 1300px) {
+  .advantages__block {
+    margin-left: -21rem; }
+  .advantages__advantage {
+    max-width: 24rem; } }
+
 @media screen and (max-width: 1200px) {
   html {
     font-size: 12px; }
   .nav__item {
-    margin-right: 1rem; } }
+    margin-right: 1rem; }
+  .advantages__item:nth-child(1) {
+    top: 3rem;
+    right: -26.5rem; }
+  .advantages__item:nth-child(2) {
+    top: 13rem;
+    right: -33rem; }
+  .advantages__item:nth-child(3) {
+    bottom: 13rem;
+    right: -35rem; }
+  .advantages__item:nth-child(4) {
+    bottom: -0.1rem;
+    right: -29rem; } }
 
 @media screen and (max-width: 1150px) {
   .clients-card {
-    min-height: 37rem; } }
+    min-height: 37rem; }
+  .advantages__block {
+    margin-left: -26rem; } }
+
+@media screen and (max-width: 1050px) {
+  .advantages__block {
+    margin-left: -30rem; } }
+
+@media screen and (max-width: 950px) {
+  .advantages__block {
+    margin-left: -33rem; } }
 
 @media screen and (max-width: 992px) {
   html {
@@ -1918,6 +2016,32 @@ div.invalid {
       max-width: 9rem; } }
 
 @media screen and (max-width: 850px) {
+  .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    justify-content: space-between; }
+  .col-30 {
+    width: 95%; }
+  .col-35 {
+    width: 95%; }
+  .col-39 {
+    width: 95%; }
+  .col-40 {
+    width: 95%; }
+  .col-50 {
+    width: 95%; }
+  .col-55 {
+    width: 95%; }
+  .col-60 {
+    width: 95%; }
+  .col-63 {
+    width: 95%; }
+  .col-70 {
+    width: 95%; }
   .team-card__name {
     font-size: 1rem; }
   .team-card__role {
@@ -1932,26 +2056,16 @@ div.invalid {
     padding-top: 17rem; }
   .advantages {
     display: none; }
+  .fantasy {
+    display: none; }
   .clients {
     display: none; }
   .footer__wrap {
-    margin-top: 0; } }
-
-@media screen and (max-width: 770px) {
+    margin-top: 0; }
   .display-yes {
     display: none; }
   .display-none {
     display: list-item; }
-  .design__row {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: start;
-    align-items: flex-start;
-    -webkit-box-pack: justify;
-    justify-content: space-between; }
-  .design__col {
-    flex-basis: 32%;
-    z-index: 1; }
   .design {
     position: relative;
     background-color: #fff;
@@ -2013,9 +2127,6 @@ div.invalid {
       background-color: #e3b873;
       color: #ffffff;
       padding: 1.214rem 2.5rem 1.214rem 2.3rem; }
-  .design__card-pricetag {
-    min-width: 16.285rem;
-    padding-right: 5.6rem; }
   .types .col-30 {
     width: 95%; }
   .types .row {
@@ -2062,20 +2173,6 @@ div.invalid {
     background-color: #e3b873;
     color: #ffffff;
     padding: 1.214rem 2.6rem; }
-  .row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    justify-content: space-between; }
-  .container {
-    width: 95%; }
-  .col-30 {
-    width: 95%; }
-  .col-50 {
-    width: 95%; }
   .button__scroll-up {
     display: none !important; }
   .team {
