--- a/practice/src/sass/_fonts.scss
+++ b/practice/src/sass/_fonts.scss
@@ -18,3 +18,11 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+	font-family: 'FuturaLightC';
+	src:
+		url('../fonts/futura/FuturaLightC.woff') format('woff');
+	font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
