--- a/practice/src/sass/style.sass
+++ b/practice/src/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'templates/control'
 @import 'templates/types'
 @import 'templates/advantages'
+@import 'templates/fantasy'
 @import 'templates/design'
 @import 'templates/modal'
 @import 'templates/steps'
