--- a/practice/src/sass/templates/_advantages.sass
+++ b/practice/src/sass/templates/_advantages.sass
@@ -1,5 +1,6 @@
 .advantages
   padding-top: 10.8rem
+  padding-bottom: 12rem
   &__row
     // align-items: center
   &__col
@@ -34,7 +35,7 @@
       top: -0.5rem
       right: -11rem
       width: 100%
-      height: 110%
+      height: 125%
       background-image: url(../img/circle.svg)
       background-position: left top
       background-repeat: no-repeat  
@@ -83,6 +84,7 @@
   &-form
     &__dialog
       display: block
+      margin-top: 3rem
       position: relative
       max-width: 36.36rem
       background: $dark url('../img/bg-lines.svg')
